--- a/about.html
+++ b/about.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="sk">
- <head>
+<!DOCTYPE html><html lang="sk"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>O nás – Profesionálne autoservisné riešenia | domain</title>
@@ -21,7 +19,7 @@
     <div class="container">
      <a class="navbar-brand c-logo" href="/"> 
       <svg class="c-logo__img" width="150" height="40" viewBox="0 0 150 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
-       <rect width="150" height="40" rx="4" fill="#000000" /> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8" /> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
+       <rect width="150" height="40" rx="4" fill="#000000"></rect> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8"></path> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
       </svg> 
      </a>
      <button class="navbar-toggler c-nav__toggle" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Prepnúť navigáciu"><span class="navbar-toggler-icon"></span></button>
@@ -58,7 +56,7 @@
       </div>
       <div class="c-hero-about__image" data-aos="fade-left">
        <div class="ratio ratio-4x3">
-        <img src="https://images.unsplash.com/photo-1487754180451-c456f719a1fc?w=800&amp;h=600&amp;fit=crop" alt="Moderný autoservis s profesionálnym vybavením, automotive, workshop, technology, professional" class="c-hero-about__img" loading="lazy" width="800" height="600">
+        <img src="img/90304.jpg" alt="Moderný autoservis s profesionálnym vybavením, automotive, workshop, technology, professional" class="c-hero-about__img" loading="lazy" width="800" height="600">
        </div>
       </div>
      </div>
@@ -71,7 +69,7 @@
       <div class="c-card c-value-card" data-aos="fade-up" data-aos-delay="100">
        <div class="c-value-card__icon">
         <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M30 5L37.5 22.5H56.25L41.25 33.75L48.75 51.25L30 40L11.25 51.25L18.75 33.75L3.75 22.5H22.5L30 5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+         <path d="M30 5L37.5 22.5H56.25L41.25 33.75L48.75 51.25L30 40L11.25 51.25L18.75 33.75L3.75 22.5H22.5L30 5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
         </svg>
        </div>
        <h3 class="c-value-card__title">Kvalita</h3>
@@ -80,7 +78,7 @@
       <div class="c-card c-value-card" data-aos="fade-up" data-aos-delay="200">
        <div class="c-value-card__icon">
         <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M30 55C43.8071 55 55 43.8071 55 30C55 16.1929 43.8071 5 30 5C16.1929 5 5 16.1929 5 30C5 43.8071 16.1929 55 30 55Z" stroke="currentColor" stroke-width="2" /> <path d="M30 15V30L40 40" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+         <path d="M30 55C43.8071 55 55 43.8071 55 30C55 16.1929 43.8071 5 30 5C16.1929 5 5 16.1929 5 30C5 43.8071 16.1929 55 30 55Z" stroke="currentColor" stroke-width="2"></path> <path d="M30 15V30L40 40" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
         </svg>
        </div>
        <h3 class="c-value-card__title">Spoľahlivosť</h3>
@@ -89,7 +87,7 @@
       <div class="c-card c-value-card" data-aos="fade-up" data-aos-delay="300">
        <div class="c-value-card__icon">
         <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M30 5C16.1929 5 5 16.1929 5 30C5 43.8071 16.1929 55 30 55C43.8071 55 55 43.8071 55 30" stroke="currentColor" stroke-width="2" stroke-linecap="round" /> <path d="M30 15V30H45" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+         <path d="M30 5C16.1929 5 5 16.1929 5 30C5 43.8071 16.1929 55 30 55C43.8071 55 55 43.8071 55 30" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path> <path d="M30 15V30H45" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
         </svg>
        </div>
        <h3 class="c-value-card__title">Inovácia</h3>
@@ -105,7 +103,7 @@
      <div class="l-grid l-grid--4col">
       <div class="c-card c-team-card" data-aos="zoom-in" data-aos-delay="100">
        <div class="ratio ratio-1x1 c-team-card__avatar-wrapper">
-        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&amp;h=400&amp;fit=crop" alt="Miroslav Novák, hlavný mechanik, automotive expert, professional" class="c-team-card__avatar" loading="lazy" width="400" height="400">
+        <img src="img/7983.jpg" alt="Miroslav Novák, hlavný mechanik, automotive expert, professional" class="c-team-card__avatar" loading="lazy" width="400" height="400">
        </div>
        <div class="c-team-card__content">
         <h3 class="c-team-card__name">Miroslav Novák</h3>
@@ -115,7 +113,7 @@
       </div>
       <div class="c-card c-team-card" data-aos="zoom-in" data-aos-delay="200">
        <div class="ratio ratio-1x1 c-team-card__avatar-wrapper">
-        <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=400&amp;h=400&amp;fit=crop" alt="Peter Horváth, diagnostický technik, automotive technician, expert" class="c-team-card__avatar" loading="lazy" width="400" height="400">
+        <img src="img/5622.jpg" alt="Peter Horváth, diagnostický technik, automotive technician, expert" class="c-team-card__avatar" loading="lazy" width="400" height="400">
        </div>
        <div class="c-team-card__content">
         <h3 class="c-team-card__name">Peter Horváth</h3>
@@ -125,7 +123,7 @@
       </div>
       <div class="c-card c-team-card" data-aos="zoom-in" data-aos-delay="300">
        <div class="ratio ratio-1x1 c-team-card__avatar-wrapper">
-        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&amp;h=400&amp;fit=crop" alt="Ján Kovács, špecialista na karosérie, bodywork specialist, professional" class="c-team-card__avatar" loading="lazy" width="400" height="400">
+        <img src="img/20916.jpg" alt="Ján Kovács, špecialista na karosérie, bodywork specialist, professional" class="c-team-card__avatar" loading="lazy" width="400" height="400">
        </div>
        <div class="c-team-card__content">
         <h3 class="c-team-card__name">Ján Kovács</h3>
@@ -135,7 +133,7 @@
       </div>
       <div class="c-card c-team-card" data-aos="zoom-in" data-aos-delay="400">
        <div class="ratio ratio-1x1 c-team-card__avatar-wrapper">
-        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=400&amp;h=400&amp;fit=crop" alt="Martin Varga, servisný poradca, service advisor, customer care" class="c-team-card__avatar" loading="lazy" width="400" height="400">
+        <img src="img/178547.jpg" alt="Martin Varga, servisný poradca, service advisor, customer care" class="c-team-card__avatar" loading="lazy" width="400" height="400">
        </div>
        <div class="c-team-card__content">
         <h3 class="c-team-card__name">Martin Varga</h3>
@@ -153,32 +151,32 @@
      <div class="c-partners-grid" data-aos="fade-up" data-aos-delay="100">
       <div class="c-partner-item">
        <div class="c-partner-logo">
-        <img src="https://images.unsplash.com/photo-1611689342806-0863700ce1e4?w=200&amp;h=100&amp;fit=crop" alt="Partner logo, automotive parts, supplier, certified" loading="lazy" width="200" height="100">
+        <img src="img/automotive-gear-logo-design-vector-template.jpg" alt="Partner logo, automotive parts, supplier, certified" loading="lazy" width="200" height="100">
        </div>
       </div>
       <div class="c-partner-item">
        <div class="c-partner-logo">
-        <img src="https://images.unsplash.com/photo-1599950753725-c3b6ea48a90d?w=200&amp;h=100&amp;fit=crop" alt="Partner logo, automotive technology, certified supplier, quality" loading="lazy" width="200" height="100">
+        <img src="img/lifetime-warranty-badge-logo-certified-lifetime-warranty-label-design-with-5-.jpg" alt="Partner logo, automotive technology, certified supplier, quality" loading="lazy" width="200" height="100">
        </div>
       </div>
       <div class="c-partner-item">
        <div class="c-partner-logo">
-        <img src="https://images.unsplash.com/photo-1606107557195-0e29a4b5b4aa?w=200&amp;h=100&amp;fit=crop" alt="Partner logo, automotive solutions, premium parts, certified" loading="lazy" width="200" height="100">
+        <img src="img/automotive-gear-logo-design-vector-template.jpg" alt="Partner logo, automotive solutions, premium parts, certified" loading="lazy" width="200" height="100">
        </div>
       </div>
       <div class="c-partner-item">
        <div class="c-partner-logo">
-        <img src="https://images.unsplash.com/photo-1614028674026-a65e31bfd27c?w=200&amp;h=100&amp;fit=crop" alt="Partner logo, automotive industry, quality supplier, certified" loading="lazy" width="200" height="100">
+        <img src="img/13157.jpg" alt="Partner logo, automotive industry, quality supplier, certified" loading="lazy" width="200" height="100">
        </div>
       </div>
       <div class="c-partner-item">
        <div class="c-partner-logo">
-        <img src="https://images.unsplash.com/photo-1615799998603-7c6270a45196?w=200&amp;h=100&amp;fit=crop" alt="Partner logo, automotive equipment, professional tools, certified" loading="lazy" width="200" height="100">
+        <img src="img/best-engine-logo-template-illustration.jpg" alt="Partner logo, automotive equipment, professional tools, certified" loading="lazy" width="200" height="100">
        </div>
       </div>
       <div class="c-partner-item">
        <div class="c-partner-logo">
-        <img src="https://images.unsplash.com/photo-1620288627223-53302f4e8c74?w=200&amp;h=100&amp;fit=crop" alt="Partner logo, automotive diagnostics, technology partner, certified" loading="lazy" width="200" height="100">
+        <img src="img/line-piston-with-hexagon-logo-design-vector-graphic-symbol-icon-illustration-.jpg" alt="Partner logo, automotive diagnostics, technology partner, certified" loading="lazy" width="200" height="100">
        </div>
       </div>
      </div>
@@ -191,7 +189,7 @@
      <div class="l-grid l-grid--3col">
       <article class="c-card c-blog-card" data-aos="fade-up" data-aos-delay="100">
        <div class="ratio ratio-16x9">
-        <img src="https://images.unsplash.com/photo-1625047509168-a7026f36de04?w=600&amp;h=400&amp;fit=crop" alt="Zimná príprava vozidla, winter car maintenance, automotive care, seasonal" class="c-blog-card__image" loading="lazy" width="600" height="400">
+        <img src="img/2617.jpg" alt="Zimná príprava vozidla, winter car maintenance, automotive care, seasonal" class="c-blog-card__image" loading="lazy" width="600" height="400">
        </div>
        <div class="c-blog-card__content">
         <span class="c-blog-card__date">15. január 2025</span>
@@ -202,7 +200,7 @@
       </article>
       <article class="c-card c-blog-card" data-aos="fade-up" data-aos-delay="200">
        <div class="ratio ratio-16x9">
-        <img src="https://images.unsplash.com/photo-1632823469831-6b6f19b72f85?w=600&amp;h=400&amp;fit=crop" alt="Diagnostika motora, engine diagnostics, automotive technology, professional" class="c-blog-card__image" loading="lazy" width="600" height="400">
+        <img src="img/17106.jpg" alt="Diagnostika motora, engine diagnostics, automotive technology, professional" class="c-blog-card__image" loading="lazy" width="600" height="400">
        </div>
        <div class="c-blog-card__content">
         <span class="c-blog-card__date">8. január 2025</span>
@@ -242,7 +240,7 @@
       </div>
       <div class="c-charity-image" data-aos="fade-left">
        <div class="ratio ratio-4x3">
-        <img src="https://images.unsplash.com/photo-1559027615-cd4628902d4a?w=800&amp;h=600&amp;fit=crop" alt="Charitatívna aktivita, charity work, community support, social responsibility" class="c-charity-img" loading="lazy" width="800" height="600">
+        <img src="img/101692.jpg" alt="Charitatívna aktivita, charity work, community support, social responsibility" class="c-charity-img" loading="lazy" width="800" height="600">
        </div>
       </div>
      </div>
@@ -269,19 +267,19 @@
       <div class="contact-info">
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {address}
        </p>
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {telephone}
        </p>
        <p class="mb-0">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         info@domain.com
        </p>
@@ -324,6 +322,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
