--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="sk">
- <head>
+<!DOCTYPE html><html lang="sk"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ochrana osobných údajov - domain</title>
@@ -20,7 +18,7 @@
     <div class="container">
      <a class="navbar-brand c-logo" href="/"> 
       <svg class="c-logo__img" width="150" height="40" viewBox="0 0 150 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
-       <rect width="150" height="40" rx="4" fill="#000000" /> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8" /> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
+       <rect width="150" height="40" rx="4" fill="#000000"></rect> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8"></path> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
       </svg> 
      </a>
      <button class="navbar-toggler c-nav__toggle" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Prepnúť navigáciu"><span class="navbar-toggler-icon"></span></button>
@@ -300,19 +298,19 @@
       <div class="contact-info">
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {address}
        </p>
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {telephone}
        </p>
        <p class="mb-0">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         info@domain.com
        </p>
@@ -355,6 +353,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
