--- a/terms_of_services.html
+++ b/terms_of_services.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="sk">
- <head>
+<!DOCTYPE html><html lang="sk"><head>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -11,7 +9,7 @@
     <div class="container">
      <a class="navbar-brand c-logo" href="/"> 
       <svg class="c-logo__img" width="150" height="40" viewBox="0 0 150 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
-       <rect width="150" height="40" rx="4" fill="#000000" /> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8" /> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
+       <rect width="150" height="40" rx="4" fill="#000000"></rect> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8"></path> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
       </svg> 
      </a>
      <button class="navbar-toggler c-nav__toggle" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Prepnúť navigáciu"><span class="navbar-toggler-icon"></span></button>
@@ -30,9 +28,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width," initial-scale="1.0">
   <title>Podmienky poskytovania služieb | AutoLuxe SK</title>
-  <meta name="description" content="Prečítajte" si podmienky poskytovania služieb autoluxe sk. informácie o registrácii, platbe, zodpovednosti a právach používateľov.\_>
-  <meta property="og:title" content="Podmienky" poskytovania služieb | autoluxe sk\_>
-  <meta property="og:description" content="Prečítajte" si podmienky poskytovania služieb autoluxe sk. informácie o registrácii, platbe, zodpovednosti a právach používateľov.\_>
+  <meta name="description" content="Prečítajte" si="" podmienky="" poskytovania="" služieb="" autoluxe="" sk.="" informácie="" o="" registrácii,="" platbe,="" zodpovednosti="" a="" právach="" používateľov.\_="">
+  <meta property="og:title" content="Podmienky" poskytovania="" služieb="" |="" autoluxe="" sk\_="">
+  <meta property="og:description" content="Prečítajte" si="" podmienky="" poskytovania="" služieb="" autoluxe="" sk.="" informácie="" o="" registrácii,="" platbe,="" zodpovednosti="" a="" právach="" používateľov.\_="">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://domain.com/terms_of_services.html">
   <link rel="canonical" href="https://domain.com/terms_of_services.html">
@@ -41,18 +39,18 @@
   <script type="application/ld+json">{  \"@context\": \"https://schema.org\",  \"@type\": \"Organization\",  \"name\": \"AutoLuxe SK\",  \"url\": \"https://domain.com\",  \"logo\": \"https://images.unsplash.com/photo-1614200187524-dc4b892acf16?w=300&h=80&fit=crop\",  \"contactPoint\": {    \"@type\": \"ContactPoint\",    \"telephone\": \"{telephone}\",    \"contactType\": \"Zákaznícka podpora\",    \"email\": \"info@domain.com\",    \"areaServed\": \"SK\",    \"availableLanguage\": \"sk\"  },  \"address\": {    \"@type\": \"PostalAddress\",    \"streetAddress\": \"{address}\",    \"addressCountry\": \"SK\"  }}</script>
   <script type="application/ld+json">{  \"@context\": \"https://schema.org\",  \"@type\": \"WebSite\",  \"name\": \"AutoLuxe SK\",  \"url\": \"https://domain.com\"}</script>
   <main>
-   <section class="l-section" py-4 py-md-5\_>
+   <section class="l-section" py-4="" py-md-5\_="">
     <div class="container">
      <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
        <li class="breadcrumb-item"><a href="/">Domov</a></li>
-       <li class="breadcrumb-item" active\_ aria-current="page">Podmienky poskytovania služieb</li>
+       <li class="breadcrumb-item" active\_="" aria-current="page">Podmienky poskytovania služieb</li>
       </ol>
      </nav>
-     <div class="row" justify-content-center\_>
-      <div class="col-12" col-lg-10\_>
+     <div class="row" justify-content-center\_="">
+      <div class="col-12" col-lg-10\_="">
        <h1 class="mb-4">Podmienky poskytovania služieb</h1>
-       <p class="text-muted" mb-5\_><strong>Posledná aktualizácia:</strong> 15. januára 2025</p>
+       <p class="text-muted" mb-5\_=""><strong>Posledná aktualizácia:</strong> 15. januára 2025</p>
        <div class="c-terms-content">
         <section class="mb-5">
          <h2>1. Úvod a všeobecné ustanovenia</h2>
@@ -214,19 +212,19 @@
       <div class="contact-info">
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {address}
        </p>
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {telephone}
        </p>
        <p class="mb-0">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         info@domain.com
        </p>
@@ -269,6 +267,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
