--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="sk">
- <head>
+<!DOCTYPE html><html lang="sk"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kontakt - Luxusné Autoservisné Služby | domain.com</title>
@@ -21,7 +19,7 @@
     <div class="container">
      <a class="navbar-brand c-logo" href="/"> 
       <svg class="c-logo__img" width="150" height="40" viewBox="0 0 150 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
-       <rect width="150" height="40" rx="4" fill="#000000" /> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8" /> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
+       <rect width="150" height="40" rx="4" fill="#000000"></rect> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8"></path> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
       </svg> 
      </a>
      <button class="navbar-toggler c-nav__toggle" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Prepnúť navigáciu"><span class="navbar-toggler-icon"></span></button>
@@ -59,15 +57,15 @@
        <div class="c-contact-form-wrapper">
         <h2 class="c-contact-form__title">Rezervujte si termín</h2>
         <p class="c-contact-form__description">Vyplňte formulár a my vás budeme čoskoro kontaktovať.</p>
-        <form class="c-form c-contact-form" method="POST" action="thank_you.html" novalidate>
+        <form class="c-form c-contact-form" method="POST" action="thank_you.html" novalidate="">
          <div class="c-form__group">
-          <label for="contact-name" class="c-form__label">Meno a priezvisko *</label> <input type="text" id="contact-name" name="name" class="c-form__input" required aria-required="true"> <span class="c-form__error" role="alert">Prosím, zadajte vaše meno</span>
+          <label for="contact-name" class="c-form__label">Meno a priezvisko *</label> <input type="text" id="contact-name" name="name" class="c-form__input" required="" aria-required="true"> <span class="c-form__error" role="alert">Prosím, zadajte vaše meno</span>
          </div>
          <div class="c-form__group">
-          <label for="contact-email" class="c-form__label">E-mailová adresa *</label> <input type="email" id="contact-email" name="email" class="c-form__input" required aria-required="true"> <span class="c-form__error" role="alert">Prosím, zadajte platnú e-mailovú adresu</span>
+          <label for="contact-email" class="c-form__label">E-mailová adresa *</label> <input type="email" id="contact-email" name="email" class="c-form__input" required="" aria-required="true"> <span class="c-form__error" role="alert">Prosím, zadajte platnú e-mailovú adresu</span>
          </div>
          <div class="c-form__group">
-          <label for="contact-phone" class="c-form__label">Telefónne číslo *</label> <input type="tel" id="contact-phone" name="phone" class="c-form__input" required aria-required="true"> <span class="c-form__error" role="alert">Prosím, zadajte platné telefónne číslo</span>
+          <label for="contact-phone" class="c-form__label">Telefónne číslo *</label> <input type="tel" id="contact-phone" name="phone" class="c-form__input" required="" aria-required="true"> <span class="c-form__error" role="alert">Prosím, zadajte platné telefónne číslo</span>
          </div>
          <div class="c-form__group">
           <label for="contact-service" class="c-form__label">Typ služby</label> <select id="contact-service" name="service" class="c-form__select"> <option value="">Vyberte službu</option> <option value="diagnostika">Diagnostika vozidla</option> <option value="servis">Pravidelný servis</option> <option value="opravy">Opravy a údržba</option> <option value="detailing">Detailing a leštenie</option> <option value="ine">Iné</option> </select>
@@ -76,7 +74,7 @@
           <label for="contact-message" class="c-form__label">Vaša správa</label> <textarea id="contact-message" name="message" class="c-form__textarea" rows="5"></textarea>
          </div>
          <div class="c-form__group c-form__checkbox-group">
-          <label class="c-form__checkbox"> <input type="checkbox" id="contact-privacy" name="privacy" required aria-required="true"> <span class="c-form__checkbox-text">Prečítal som si a súhlasím so <a href="privacy.html" class="c-form__link">Zásadami ochrany osobných údajov</a> *</span> </label> <span class="c-form__error" role="alert">Musíte súhlasiť so Zásadami ochrany osobných údajov pred odoslaním formulára</span>
+          <label class="c-form__checkbox"> <input type="checkbox" id="contact-privacy" name="privacy" required="" aria-required="true"> <span class="c-form__checkbox-text">Prečítal som si a súhlasím so <a href="privacy.html" class="c-form__link">Zásadami ochrany osobných údajov</a> *</span> </label> <span class="c-form__error" role="alert">Musíte súhlasiť so Zásadami ochrany osobných údajov pred odoslaním formulára</span>
          </div>
          <button type="submit" class="c-button c-button--primary c-form__submit">Odoslať správu</button>
         </form>
@@ -89,7 +87,7 @@
          <div class="c-contact-info-item">
           <div class="c-contact-info-item__icon">
            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path d="M20 10.999h2C22 5.869 18.127 2 12.99 2v2C17.052 4 20 6.943 20 10.999z" fill="currentColor" /> <path d="M13 8c2.103 0 3 .897 3 3h2c0-3.225-1.775-5-5-5v2zm3.422 5.443a1.001 1.001 0 0 0-1.391.043l-2.393 2.461c-.576-.11-1.734-.471-2.926-1.66-1.192-1.193-1.553-2.354-1.66-2.926l2.459-2.394a1 1 0 0 0 .043-1.391L6.859 3.513a1 1 0 0 0-1.391-.087l-2.17 1.861a1 1 0 0 0-.29.649c-.015.25-.301 6.172 4.291 10.766C11.305 20.707 16.323 21 17.705 21c.202 0 .326-.006.359-.008a.992.992 0 0 0 .648-.291l1.86-2.171a.997.997 0 0 0-.086-1.391l-4.064-3.696z" fill="currentColor" />
+            <path d="M20 10.999h2C22 5.869 18.127 2 12.99 2v2C17.052 4 20 6.943 20 10.999z" fill="currentColor"></path> <path d="M13 8c2.103 0 3 .897 3 3h2c0-3.225-1.775-5-5-5v2zm3.422 5.443a1.001 1.001 0 0 0-1.391.043l-2.393 2.461c-.576-.11-1.734-.471-2.926-1.66-1.192-1.193-1.553-2.354-1.66-2.926l2.459-2.394a1 1 0 0 0 .043-1.391L6.859 3.513a1 1 0 0 0-1.391-.087l-2.17 1.861a1 1 0 0 0-.29.649c-.015.25-.301 6.172 4.291 10.766C11.305 20.707 16.323 21 17.705 21c.202 0 .326-.006.359-.008a.992.992 0 0 0 .648-.291l1.86-2.171a.997.997 0 0 0-.086-1.391l-4.064-3.696z" fill="currentColor"></path>
            </svg>
           </div>
           <div class="c-contact-info-item__content">
@@ -100,7 +98,7 @@
          <div class="c-contact-info-item">
           <div class="c-contact-info-item__icon">
            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.223-8-6.222V6h16zM4 18V9.044l7.386 5.745a.994.994 0 0 0 1.228 0L20 9.044 20.002 18H4z" fill="currentColor" />
+            <path d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.223-8-6.222V6h16zM4 18V9.044l7.386 5.745a.994.994 0 0 0 1.228 0L20 9.044 20.002 18H4z" fill="currentColor"></path>
            </svg>
           </div>
           <div class="c-contact-info-item__content">
@@ -111,7 +109,7 @@
          <div class="c-contact-info-item">
           <div class="c-contact-info-item__icon">
            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path d="M12 2C7.589 2 4 5.589 4 9.995 3.971 16.44 11.696 21.784 12 22c0 0 8.029-5.56 8-12 0-4.411-3.589-8-8-8zm0 12c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z" fill="currentColor" />
+            <path d="M12 2C7.589 2 4 5.589 4 9.995 3.971 16.44 11.696 21.784 12 22c0 0 8.029-5.56 8-12 0-4.411-3.589-8-8-8zm0 12c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z" fill="currentColor"></path>
            </svg>
           </div>
           <div class="c-contact-info-item__content">
@@ -133,15 +131,15 @@
          <div class="c-contact-social__links">
           <a href="https://facebook.com" class="c-contact-social__link" aria-label="Facebook" target="_blank" rel="noopener noreferrer"> 
            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z" fill="currentColor" />
+            <path d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z" fill="currentColor"></path>
            </svg> 
           </a> <a href="https://instagram.com" class="c-contact-social__link" aria-label="Instagram" target="_blank" rel="noopener noreferrer"> 
            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path d="M11.999 7.377a4.623 4.623 0 1 0 0 9.248 4.623 4.623 0 0 0 0-9.248zm0 7.627a3.004 3.004 0 1 1 0-6.008 3.004 3.004 0 0 1 0 6.008z" fill="currentColor" /> <circle cx="16.806" cy="7.207" r="1.078" fill="currentColor" /> <path d="M20.533 6.111A4.605 4.605 0 0 0 17.9 3.479a6.606 6.606 0 0 0-2.186-.42c-.963-.042-1.268-.054-3.71-.054s-2.755 0-3.71.054a6.554 6.554 0 0 0-2.184.42 4.6 4.6 0 0 0-2.633 2.632 6.585 6.585 0 0 0-.419 2.186c-.043.962-.056 1.267-.056 3.71 0 2.442 0 2.753.056 3.71.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632 6.584 6.584 0 0 0 2.185.45c.963.042 1.268.055 3.71.055s2.755 0 3.71-.055a6.615 6.615 0 0 0 2.186-.419 4.613 4.613 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.186.043-.962.056-1.267.056-3.71s0-2.753-.056-3.71a6.581 6.581 0 0 0-.421-2.217zm-1.218 9.532a5.043 5.043 0 0 1-.311 1.688 2.987 2.987 0 0 1-1.712 1.711 4.985 4.985 0 0 1-1.67.311c-.95.044-1.218.055-3.654.055-2.438 0-2.687 0-3.655-.055a4.96 4.96 0 0 1-1.669-.311 2.985 2.985 0 0 1-1.719-1.711 5.08 5.08 0 0 1-.311-1.669c-.043-.95-.053-1.218-.053-3.654 0-2.437 0-2.686.053-3.655a5.038 5.038 0 0 1 .311-1.687c.305-.789.93-1.41 1.719-1.712a5.01 5.01 0 0 1 1.669-.311c.951-.043 1.218-.055 3.655-.055s2.687 0 3.654.055a4.96 4.96 0 0 1 1.67.311 2.991 2.991 0 0 1 1.712 1.712 5.08 5.08 0 0 1 .311 1.669c.043.951.054 1.218.054 3.655 0 2.436 0 2.698-.043 3.654h-.011z" fill="currentColor" />
+            <path d="M11.999 7.377a4.623 4.623 0 1 0 0 9.248 4.623 4.623 0 0 0 0-9.248zm0 7.627a3.004 3.004 0 1 1 0-6.008 3.004 3.004 0 0 1 0 6.008z" fill="currentColor"></path> <circle cx="16.806" cy="7.207" r="1.078" fill="currentColor"></circle> <path d="M20.533 6.111A4.605 4.605 0 0 0 17.9 3.479a6.606 6.606 0 0 0-2.186-.42c-.963-.042-1.268-.054-3.71-.054s-2.755 0-3.71.054a6.554 6.554 0 0 0-2.184.42 4.6 4.6 0 0 0-2.633 2.632 6.585 6.585 0 0 0-.419 2.186c-.043.962-.056 1.267-.056 3.71 0 2.442 0 2.753.056 3.71.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632 6.584 6.584 0 0 0 2.185.45c.963.042 1.268.055 3.71.055s2.755 0 3.71-.055a6.615 6.615 0 0 0 2.186-.419 4.613 4.613 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.186.043-.962.056-1.267.056-3.71s0-2.753-.056-3.71a6.581 6.581 0 0 0-.421-2.217zm-1.218 9.532a5.043 5.043 0 0 1-.311 1.688 2.987 2.987 0 0 1-1.712 1.711 4.985 4.985 0 0 1-1.67.311c-.95.044-1.218.055-3.654.055-2.438 0-2.687 0-3.655-.055a4.96 4.96 0 0 1-1.669-.311 2.985 2.985 0 0 1-1.719-1.711 5.08 5.08 0 0 1-.311-1.669c-.043-.95-.053-1.218-.053-3.654 0-2.437 0-2.686.053-3.655a5.038 5.038 0 0 1 .311-1.687c.305-.789.93-1.41 1.719-1.712a5.01 5.01 0 0 1 1.669-.311c.951-.043 1.218-.055 3.655-.055s2.687 0 3.654.055a4.96 4.96 0 0 1 1.67.311 2.991 2.991 0 0 1 1.712 1.712 5.08 5.08 0 0 1 .311 1.669c.043.951.054 1.218.054 3.655 0 2.436 0 2.698-.043 3.654h-.011z" fill="currentColor"></path>
            </svg> 
           </a> <a href="https://linkedin.com" class="c-contact-social__link" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"> 
            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <circle cx="4.983" cy="5.009" r="2.188" fill="currentColor" /> <path d="M9.237 8.855v12.139h3.769v-6.003c0-1.584.298-3.118 2.262-3.118 1.937 0 1.961 1.811 1.961 3.218v5.904H21v-6.657c0-3.27-.704-5.783-4.526-5.783-1.835 0-3.065 1.007-3.568 1.96h-.051v-1.66H9.237zm-6.142 0H6.87v12.139H3.095z" fill="currentColor" />
+            <circle cx="4.983" cy="5.009" r="2.188" fill="currentColor"></circle> <path d="M9.237 8.855v12.139h3.769v-6.003c0-1.584.298-3.118 2.262-3.118 1.937 0 1.961 1.811 1.961 3.218v5.904H21v-6.657c0-3.27-.704-5.783-4.526-5.783-1.835 0-3.065 1.007-3.568 1.96h-.051v-1.66H9.237zm-6.142 0H6.87v12.139H3.095z" fill="currentColor"></path>
            </svg> 
           </a>
          </div>
@@ -158,7 +156,7 @@
       <div class="c-map-container">
        <div class="c-map-placeholder">
         <svg width="64" height="64" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M12 2C7.589 2 4 5.589 4 9.995 3.971 16.44 11.696 21.784 12 22c0 0 8.029-5.56 8-12 0-4.411-3.589-8-8-8zm0 12c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z" fill="currentColor" />
+         <path d="M12 2C7.589 2 4 5.589 4 9.995 3.971 16.44 11.696 21.784 12 22c0 0 8.029-5.56 8-12 0-4.411-3.589-8-8-8zm0 12c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z" fill="currentColor"></path>
         </svg>
         <p class="c-map-placeholder__text">Mapa polohy bude dostupná po aktivácii služby</p>
         <p class="c-map-placeholder__address">{address}</p>
@@ -186,19 +184,19 @@
       <div class="contact-info">
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {address}
        </p>
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {telephone}
        </p>
        <p class="mb-0">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         info@domain.com
        </p>
@@ -241,6 +239,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
