--- a/gdpr-rights.html
+++ b/gdpr-rights.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="sk">
- <head>
+<!DOCTYPE html><html lang="sk"><head>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -11,7 +9,7 @@
     <div class="container">
      <a class="navbar-brand c-logo" href="/"> 
       <svg class="c-logo__img" width="150" height="40" viewBox="0 0 150 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
-       <rect width="150" height="40" rx="4" fill="#000000" /> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8" /> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
+       <rect width="150" height="40" rx="4" fill="#000000"></rect> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8"></path> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
       </svg> 
      </a>
      <button class="navbar-toggler c-nav__toggle" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Prepnúť navigáciu"><span class="navbar-toggler-icon"></span></button>
@@ -30,10 +28,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width," initial-scale="1.0">
   <title>Vaše práva podľa GDPR | AutoElite SK</title>
-  <meta name="description" content="Zistite," aké práva máte podľa gdpr. právo na prístup, opravu, vymazanie a prenosnosť údajov. kontaktujte nás pre uplatnenie vašich práv.\_>
+  <meta name="description" content="Zistite," aké="" práva="" máte="" podľa="" gdpr.="" právo="" na="" prístup,="" opravu,="" vymazanie="" a="" prenosnosť="" údajov.="" kontaktujte="" nás="" pre="" uplatnenie="" vašich="" práv.\_="">
   <link rel="canonical" href="https://domain.com/gdpr-rights.html">
-  <meta property="og:title" content="Vaše" práva podľa gdpr | autoelite sk\_>
-  <meta property="og:description" content="Zistite," aké práva máte podľa gdpr. právo na prístup, opravu, vymazanie a prenosnosť údajov.\_>
+  <meta property="og:title" content="Vaše" práva="" podľa="" gdpr="" |="" autoelite="" sk\_="">
+  <meta property="og:description" content="Zistite," aké="" práva="" máte="" podľa="" gdpr.="" právo="" na="" prístup,="" opravu,="" vymazanie="" a="" prenosnosť="" údajov.\_="">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://domain.com/gdpr-rights.html">
   <meta property="og:image" content="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?w=1200&amp;h=630&amp;fit=crop">
@@ -45,23 +43,23 @@
    <nav aria-label="breadcrumb" class="l-container">
     <ol class="breadcrumb">
      <li class="breadcrumb-item"><a href="index.html">Domov</a></li>
-     <li class="breadcrumb-item" active\_ aria-current="page">Vaše práva podľa GDPR</li>
+     <li class="breadcrumb-item" active\_="" aria-current="page">Vaše práva podľa GDPR</li>
     </ol>
    </nav>
-   <section class="l-section" py-4 py-md-5\_>
+   <section class="l-section" py-4="" py-md-5\_="">
     <div class="l-container">
      <h1 class="c-page-title">Vaše práva podľa GDPR</h1>
      <p class="c-page-intro">Ako dotknutá osoba máte podľa Všeobecného nariadenia o ochrane údajov (GDPR) a slovenského zákona o ochrane osobných údajov viaceré práva týkajúce sa vašich osobných údajov. Na tejto stránke nájdete podrobný prehľad vašich práv a informácie o tom, ako ich môžete uplatniť.</p>
      <p class="c-page-meta">Posledná aktualizácia: 22. mája 2025</p>
     </div>
    </section>
-   <section class="l-section" py-4\_>
+   <section class="l-section" py-4\_="">
     <div class="l-container">
      <div class="c-content-grid">
       <article class="c-gdpr-right">
        <div class="c-gdpr-right__icon">
-        <svg width="48" height="48" viewBox="0" 0 24 24\_ fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M12" 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5-2.24 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3-1.34 3-3-1.34-3-3-3z\_ fill="currentColor/"> </path>
+        <svg width="48" height="48" viewBox="0" 0="" 24="" 24\_="" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+         <path d="M12" 4.5c7="" 4.5="" 2.73="" 7.61="" 1="" 12c1.73="" 4.39="" 6="" 7.5="" 11="" 7.5s9.27-3.11="" 11-7.5c-1.73-4.39-6-7.5-11-7.5zm12="" 17c-2.76="" 0-5-2.24-5-5s2.24-5="" 5-5="" 5="" 2.24="" 5-2.24="" 5zm0-8c-1.66="" 0-3="" 1.34-3="" 3s1.34="" 3="" 3-1.34="" 3-3-1.34-3-3-3z\_="" fill="currentColor/"> </path>
         </svg>
        </div>
        <h2>Právo na prístup k údajom</h2>
@@ -77,8 +75,8 @@
       </article>
       <article class="c-gdpr-right">
        <div class="c-gdpr-right__icon">
-        <svg width="48" height="48" viewBox="0" 0 24 24\_ fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M3" 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 1.83-1.83z\_ fill="currentColor/"> </path>
+        <svg width="48" height="48" viewBox="0" 0="" 24="" 24\_="" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+         <path d="M3" 17.25v21h3.75l17.81="" 9.94l-3.75-3.75l3="" 17.25zm20.71="" 7.04c.39-.39.39-1.02="" 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41="" 0l-1.83="" 1.83="" 3.75="" 1.83-1.83z\_="" fill="currentColor/"> </path>
         </svg>
        </div>
        <h2>Právo na opravu</h2>
@@ -87,8 +85,8 @@
       </article>
       <article class="c-gdpr-right">
        <div class="c-gdpr-right__icon">
-        <svg width="48" height="48" viewBox="0" 0 24 24\_ fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M6" 19c0 1.1.9 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z\_ fill="currentColor/"> </path>
+        <svg width="48" height="48" viewBox="0" 0="" 24="" 24\_="" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+         <path d="M6" 19c0="" 1.1.9="" 2="" 2h8c1.1="" 0="" 2-.9="" 2-2v7h6v12zm19="" 4h-3.5l-1-1h-5l-1="" 1h5v2h14v4z\_="" fill="currentColor/"> </path>
         </svg>
        </div>
        <h2>Právo na vymazanie („právo byť zabudnutý")</h2>
@@ -104,8 +102,8 @@
       </article>
       <article class="c-gdpr-right">
        <div class="c-gdpr-right__icon">
-        <svg width="48" height="48" viewBox="0" 0 24 24\_ fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M12" 2C6.48 2 6.48 12s4.48 10 10-4.48 10-10S17.52 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\_ fill="currentColor/"> </path>
+        <svg width="48" height="48" viewBox="0" 0="" 24="" 24\_="" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+         <path d="M12" 2c6.48="" 2="" 6.48="" 12s4.48="" 10="" 10-4.48="" 10-10s17.52="" 12="" 2zm-2="" 15l-5-5="" 1.41-1.41l10="" 14.17l7.59-7.59l19="" 8l-9="" 9z\_="" fill="currentColor/"> </path>
         </svg>
        </div>
        <h2>Právo na omedzenie spracovania</h2>
@@ -120,8 +118,8 @@
       </article>
       <article class="c-gdpr-right">
        <div class="c-gdpr-right__icon">
-        <svg width="48" height="48" viewBox="0" 0 24 24\_ fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M19" 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 1.01 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 4c-4.42 0-8 3.58-8 8H1l4 4-4H6z\_ fill="currentColor/"> </path>
+        <svg width="48" height="48" viewBox="0" 0="" 24="" 24\_="" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+         <path d="M19" 8l-4="" 4h3c0="" 3.31-2.69="" 6-6="" 6-1.01="" 0-1.97-.25-2.8-.7l-1.46="" 1.46c8.97="" 19.54="" 10.43="" 20="" 12="" 20c4.42="" 0="" 8-3.58="" 8-8h3l-4-4zm6="" 12c0-3.31="" 2.69-6="" 1.01="" 1.97.25="" 2.8.7l1.46-1.46c15.03="" 4.46="" 13.57="" 4="" 4c-4.42="" 0-8="" 3.58-8="" 8h1l4="" 4-4h6z\_="" fill="currentColor/"> </path>
         </svg>
        </div>
        <h2>Právo na prenosnosť údajov</h2>
@@ -136,8 +134,8 @@
       </article>
       <article class="c-gdpr-right">
        <div class="c-gdpr-right__icon">
-        <svg width="48" height="48" viewBox="0" 0 24 24\_ fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M12" 2C6.48 2 6.48 12s4.48 10 10-4.48 10-10S17.52 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z\_ fill="currentColor/"> </path>
+        <svg width="48" height="48" viewBox="0" 0="" 24="" 24\_="" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+         <path d="M12" 2c6.48="" 2="" 6.48="" 12s4.48="" 10="" 10-4.48="" 10-10s17.52="" 12="" 2zm1="" 15h-2v-2h2v2zm0-4h-2v7h2v6z\_="" fill="currentColor/"> </path>
         </svg>
        </div>
        <h2>Právo namietať</h2>
@@ -147,8 +145,8 @@
       </article>
       <article class="c-gdpr-right">
        <div class="c-gdpr-right__icon">
-        <svg width="48" height="48" viewBox="0" 0 24 24\_ fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-         <path d="M9" 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z\_ fill="currentColor/"> </path>
+        <svg width="48" height="48" viewBox="0" 0="" 24="" 24\_="" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+         <path d="M9" 11h7v2h2v-2zm4="" 0h-2v2h2v-2zm4="" 0h-2v2h2v-2zm2-7h-1v2h-2v2h8v2h6v2h5c-1.11="" 0-1.99.9-1.99="" 2l3="" 20c0="" 1.1.89="" 2="" 2h14c1.1="" 0="" 2-.9="" 2-2v6c0-1.1-.9-2-2-2zm0="" 16h5v9h14v11z\_="" fill="currentColor/"> </path>
         </svg>
        </div>
        <h2>Právo odvolať súhlas</h2>
@@ -164,7 +162,7 @@
      </div>
     </div>
    </section>
-   <section class="l-section" py-4 py-md-5 c-process-section\_>
+   <section class="l-section" py-4="" py-md-5="" c-process-section\_="">
     <div class="l-container">
      <h2 class="c-section-title">Ako uplatniť vaše práva</h2>
      <div class="c-process-grid">
@@ -208,9 +206,9 @@
      </div>
     </div>
    </section>
-   <section class="l-section" py-4\_>
+   <section class="l-section" py-4\_="">
     <div class="l-container">
-     <div class="c-info-card" c-info-card--highlight\_>
+     <div class="c-info-card" c-info-card--highlight\_="">
       <h2>Kontaktné údaje pre uplatnenie práv</h2>
       <div class="c-contact-details">
        <div class="c-contact-item">
@@ -230,7 +228,7 @@
      </div>
     </div>
    </section>
-   <section class="l-section" py-4 py-md-5\_>
+   <section class="l-section" py-4="" py-md-5\_="">
     <div class="l-container">
      <h2 class="c-section-title">Právo podať sťažnosť</h2>
      <div class="c-complaint-info">
@@ -245,14 +243,14 @@
         Slovenská republika</p>
        <p>Telefón: +421 2 3231 3214</p>
        <p>E-mail: <a href="mailto:info@domain.com">info@domain.com</a></p>
-       <p>Web: <a href="https://dataprotection.gov.sk" target="_blank" rel="noopener" noreferrer\_>dataprotection.gov.sk</a></p>
+       <p>Web: <a href="https://dataprotection.gov.sk" target="_blank" rel="noopener" noreferrer\_="">dataprotection.gov.sk</a></p>
       </div>
       <p>Sťažnosť môžete podať aj dozornému orgánu v členskom štáte EÚ, v ktorom máte obvyklé bydlisko, miesto výkonu práce alebo miesto údajného porušenia.</p>
       <p>Pred podaním sťažnosti vás povzývame, aby ste nás kontaktovali priamo – vynasnažíme sa vyriešiť akékoľvek obavy čo najrýchlejšie a priateľsky.</p>
      </div>
     </div>
    </section>
-   <section class="l-section" py-4\_>
+   <section class="l-section" py-4\_="">
     <div class="l-container">
      <div class="c-info-card">
       <h2>Poplatky a lehoty</h2>
@@ -264,7 +262,7 @@
      </div>
     </div>
    </section>
-   <section class="l-section" py-4 py-md-5\_>
+   <section class="l-section" py-4="" py-md-5\_="">
     <div class="l-container">
      <div class="c-related-links">
       <h2>Súvisiace dokumenty</h2>
@@ -277,12 +275,12 @@
      </div>
     </div>
    </section>
-   <section class="l-section" py-4 py-md-5 c-cta-section\_>
+   <section class="l-section" py-4="" py-md-5="" c-cta-section\_="">
     <div class="l-container">
      <div class="c-cta-card">
       <h2>Potrebujete pomoc s uplatnením vašich práv?</h2>
       <p>Náš tým je tu, aby vám pomohol. Kontaktujte nás a radi vám zodpovieme všetky otázky týkajúce sa ochrany vašich osobných údajov.</p>
-      <a href="contact.html" class="c-button" c-button--primary\_>Kontaktujte nás</a>
+      <a href="contact.html" class="c-button" c-button--primary\_="">Kontaktujte nás</a>
      </div>
     </div>
    </section>
@@ -297,19 +295,19 @@
       <div class="contact-info">
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {address}
        </p>
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {telephone}
        </p>
        <p class="mb-0">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         info@domain.com
        </p>
@@ -352,6 +350,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
