--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="sk">
- <head>
+<!DOCTYPE html><html lang="sk"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Prémiové Autoservisné Služby | Profesionálna Starostlivosť o Vaše Vozidlo</title>
@@ -21,7 +19,7 @@
     <div class="container">
      <a class="navbar-brand c-logo" href="/"> 
       <svg class="c-logo__img" width="150" height="40" viewBox="0 0 150 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
-       <rect width="150" height="40" rx="4" fill="#000000" /> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8" /> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
+       <rect width="150" height="40" rx="4" fill="#000000"></rect> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8"></path> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
       </svg> 
      </a>
      <button class="navbar-toggler c-nav__toggle" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Prepnúť navigáciu"><span class="navbar-toggler-icon"></span></button>
@@ -65,7 +63,7 @@
        <div class="c-card text-center p-4 h-100">
         <div class="ratio ratio-1x1 mb-3 mx-auto" style="max-width: 80px;">
          <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="40" cy="40" r="35" fill="#E8B4B8" /> <path d="M40 15L45 30L60 30L48 40L53 55L40 45L27 55L32 40L20 30L35 30L40 15Z" fill="#000000" />
+          <circle cx="40" cy="40" r="35" fill="#E8B4B8"></circle> <path d="M40 15L45 30L60 30L48 40L53 55L40 45L27 55L32 40L20 30L35 30L40 15Z" fill="#000000"></path>
          </svg>
         </div>
         <h3 class="h6 fw-semibold">Najlepší Autoservis 2024</h3>
@@ -75,7 +73,7 @@
        <div class="c-card text-center p-4 h-100">
         <div class="ratio ratio-1x1 mb-3 mx-auto" style="max-width: 80px;">
          <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="40" cy="40" r="35" fill="#E8B4B8" /> <rect x="25" y="20" width="30" height="40" rx="2" fill="#000000" />
+          <circle cx="40" cy="40" r="35" fill="#E8B4B8"></circle> <rect x="25" y="20" width="30" height="40" rx="2" fill="#000000"></rect>
          </svg>
         </div>
         <h3 class="h6 fw-semibold">ISO 9001 Certifikát</h3>
@@ -85,7 +83,7 @@
        <div class="c-card text-center p-4 h-100">
         <div class="ratio ratio-1x1 mb-3 mx-auto" style="max-width: 80px;">
          <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="40" cy="40" r="35" fill="#E8B4B8" /> <path d="M40 20L50 35L65 37L52 50L55 65L40 57L25 65L28 50L15 37L30 35L40 20Z" fill="#000000" />
+          <circle cx="40" cy="40" r="35" fill="#E8B4B8"></circle> <path d="M40 20L50 35L65 37L52 50L55 65L40 57L25 65L28 50L15 37L30 35L40 20Z" fill="#000000"></path>
          </svg>
         </div>
         <h3 class="h6 fw-semibold">Spokojnosť Zákazníkov 98%</h3>
@@ -95,7 +93,7 @@
        <div class="c-card text-center p-4 h-100">
         <div class="ratio ratio-1x1 mb-3 mx-auto" style="max-width: 80px;">
          <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="40" cy="40" r="35" fill="#E8B4B8" /> <circle cx="40" cy="40" r="20" fill="#000000" /> <path d="M40 25L43 35L40 45L37 35L40 25Z" fill="#E8B4B8" />
+          <circle cx="40" cy="40" r="35" fill="#E8B4B8"></circle> <circle cx="40" cy="40" r="20" fill="#000000"></circle> <path d="M40 25L43 35L40 45L37 35L40 25Z" fill="#E8B4B8"></path>
          </svg>
         </div>
         <h3 class="h6 fw-semibold">Ekologický Prístup</h3>
@@ -116,42 +114,42 @@
       <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="100">
        <div class="brand-logo-wrapper p-3 text-center">
         <svg width="100" height="60" viewBox="0 0 100 60" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="BMW">
-         <circle cx="50" cy="30" r="25" stroke="#000000" stroke-width="2" fill="none" /> <text x="50" y="35" text-anchor="middle" font-family="serif" font-size="12" font-weight="700" fill="#000000">BMW</text>
+         <circle cx="50" cy="30" r="25" stroke="#000000" stroke-width="2" fill="none"></circle> <text x="50" y="35" text-anchor="middle" font-family="serif" font-size="12" font-weight="700" fill="#000000">BMW</text>
         </svg>
        </div>
       </div>
       <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="200">
        <div class="brand-logo-wrapper p-3 text-center">
         <svg width="100" height="60" viewBox="0 0 100 60" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Mercedes">
-         <circle cx="50" cy="30" r="25" stroke="#000000" stroke-width="2" fill="none" /> <text x="50" y="35" text-anchor="middle" font-family="serif" font-size="10" font-weight="700" fill="#000000">Mercedes</text>
+         <circle cx="50" cy="30" r="25" stroke="#000000" stroke-width="2" fill="none"></circle> <text x="50" y="35" text-anchor="middle" font-family="serif" font-size="10" font-weight="700" fill="#000000">Mercedes</text>
         </svg>
        </div>
       </div>
       <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="300">
        <div class="brand-logo-wrapper p-3 text-center">
         <svg width="100" height="60" viewBox="0 0 100 60" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Audi">
-         <circle cx="30" cy="30" r="12" stroke="#000000" stroke-width="2" fill="none" /> <circle cx="50" cy="30" r="12" stroke="#000000" stroke-width="2" fill="none" /> <circle cx="70" cy="30" r="12" stroke="#000000" stroke-width="2" fill="none" />
+         <circle cx="30" cy="30" r="12" stroke="#000000" stroke-width="2" fill="none"></circle> <circle cx="50" cy="30" r="12" stroke="#000000" stroke-width="2" fill="none"></circle> <circle cx="70" cy="30" r="12" stroke="#000000" stroke-width="2" fill="none"></circle>
         </svg>
        </div>
       </div>
       <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="400">
        <div class="brand-logo-wrapper p-3 text-center">
         <svg width="100" height="60" viewBox="0 0 100 60" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Volkswagen">
-         <circle cx="50" cy="30" r="25" stroke="#000000" stroke-width="2" fill="none" /> <text x="50" y="35" text-anchor="middle" font-family="serif" font-size="14" font-weight="700" fill="#000000">VW</text>
+         <circle cx="50" cy="30" r="25" stroke="#000000" stroke-width="2" fill="none"></circle> <text x="50" y="35" text-anchor="middle" font-family="serif" font-size="14" font-weight="700" fill="#000000">VW</text>
         </svg>
        </div>
       </div>
       <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="500">
        <div class="brand-logo-wrapper p-3 text-center">
         <svg width="100" height="60" viewBox="0 0 100 60" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Škoda">
-         <circle cx="50" cy="30" r="25" stroke="#000000" stroke-width="2" fill="none" /> <text x="50" y="35" text-anchor="middle" font-family="serif" font-size="12" font-weight="700" fill="#000000">Škoda</text>
+         <circle cx="50" cy="30" r="25" stroke="#000000" stroke-width="2" fill="none"></circle> <text x="50" y="35" text-anchor="middle" font-family="serif" font-size="12" font-weight="700" fill="#000000">Škoda</text>
         </svg>
        </div>
       </div>
       <div class="col-6 col-md-4 col-lg-2" data-aos="fade-up" data-aos-delay="600">
        <div class="brand-logo-wrapper p-3 text-center">
         <svg width="100" height="60" viewBox="0 0 100 60" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Volvo">
-         <circle cx="50" cy="30" r="25" stroke="#000000" stroke-width="2" fill="none" /> <text x="50" y="35" text-anchor="middle" font-family="serif" font-size="12" font-weight="700" fill="#000000">Volvo</text>
+         <circle cx="50" cy="30" r="25" stroke="#000000" stroke-width="2" fill="none"></circle> <text x="50" y="35" text-anchor="middle" font-family="serif" font-size="12" font-weight="700" fill="#000000">Volvo</text>
         </svg>
        </div>
       </div>
@@ -170,7 +168,7 @@
       <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
        <div class="c-card h-100 d-flex flex-column">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1625047509168-a7026f36de04?w=800&amp;h=450&amp;fit=crop" class="card-img-top" alt="Diagnostika vozidla, auto servis, technická kontrola, automobil" loading="lazy" width="800" height="450">
+         <img src="img/47663.jpg" class="card-img-top" alt="Diagnostika vozidla, auto servis, technická kontrola, automobil" loading="lazy" width="800" height="450">
         </div>
         <div class="card-body d-flex flex-column">
          <h3 class="h4 fw-semibold mb-3">Diagnostika</h3>
@@ -182,7 +180,7 @@
       <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
        <div class="c-card h-100 d-flex flex-column">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1619642751034-765dfdf7c58e?w=800&amp;h=450&amp;fit=crop" class="card-img-top" alt="Opravy motora, servis automobilu, mechanik, motor" loading="lazy" width="800" height="450">
+         <img src="img/13131.jpg" class="card-img-top" alt="Opravy motora, servis automobilu, mechanik, motor" loading="lazy" width="800" height="450">
         </div>
         <div class="card-body d-flex flex-column">
          <h3 class="h4 fw-semibold mb-3">Opravy</h3>
@@ -215,25 +213,25 @@
        <ul class="list-unstyled">
         <li class="mb-3 d-flex align-items-start">
          <svg class="flex-shrink-0 me-2" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="12" cy="12" r="10" fill="#E8B4B8" /> <path d="M8 12L11 15L16 9" stroke="#000000" stroke-width="2" stroke-linecap="round" />
+          <circle cx="12" cy="12" r="10" fill="#E8B4B8"></circle> <path d="M8 12L11 15L16 9" stroke="#000000" stroke-width="2" stroke-linecap="round"></path>
          </svg>
          <span>Moderné diagnostické zariadenia</span>
         </li>
         <li class="mb-3 d-flex align-items-start">
          <svg class="flex-shrink-0 me-2" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="12" cy="12" r="10" fill="#E8B4B8" /> <path d="M8 12L11 15L16 9" stroke="#000000" stroke-width="2" stroke-linecap="round" />
+          <circle cx="12" cy="12" r="10" fill="#E8B4B8"></circle> <path d="M8 12L11 15L16 9" stroke="#000000" stroke-width="2" stroke-linecap="round"></path>
          </svg>
          <span>Certifikovaní mechanici</span>
         </li>
         <li class="mb-3 d-flex align-items-start">
          <svg class="flex-shrink-0 me-2" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="12" cy="12" r="10" fill="#E8B4B8" /> <path d="M8 12L11 15L16 9" stroke="#000000" stroke-width="2" stroke-linecap="round" />
+          <circle cx="12" cy="12" r="10" fill="#E8B4B8"></circle> <path d="M8 12L11 15L16 9" stroke="#000000" stroke-width="2" stroke-linecap="round"></path>
          </svg>
          <span>Čisté a organizované pracovisko</span>
         </li>
         <li class="mb-3 d-flex align-items-start">
          <svg class="flex-shrink-0 me-2" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="12" cy="12" r="10" fill="#E8B4B8" /> <path d="M8 12L11 15L16 9" stroke="#000000" stroke-width="2" stroke-linecap="round" />
+          <circle cx="12" cy="12" r="10" fill="#E8B4B8"></circle> <path d="M8 12L11 15L16 9" stroke="#000000" stroke-width="2" stroke-linecap="round"></path>
          </svg>
          <span>Pohodlná čakáreň pre klientov</span>
         </li>
@@ -241,7 +239,7 @@
       </div>
       <div class="col-lg-6" data-aos="fade-left">
        <div class="ratio ratio-16x9">
-        <img src="https://images.unsplash.com/photo-1632823469620-95e5ce3c3c00?w=1200&amp;h=675&amp;fit=crop" class="img-fluid rounded" alt="Interiér autoservisu, moderné vybavenie, priestory, pracovisko" loading="lazy" width="1200" height="675">
+        <img src="img/2904.jpg" class="img-fluid rounded" alt="Interiér autoservisu, moderné vybavenie, priestory, pracovisko" loading="lazy" width="1200" height="675">
        </div>
       </div>
      </div>
@@ -307,25 +305,25 @@
         <div class="row g-3">
          <div class="col-md-6">
           <div class="c-form__group">
-           <label for="firstName" class="c-form__label">Meno *</label> <input type="text" class="form-control c-form__input" id="firstName" name="firstName" required>
+           <label for="firstName" class="c-form__label">Meno *</label> <input type="text" class="form-control c-form__input" id="firstName" name="firstName" required="">
            <div class="c-form__error">Prosím, vyplňte vaše meno</div>
           </div>
          </div>
          <div class="col-md-6">
           <div class="c-form__group">
-           <label for="lastName" class="c-form__label">Priezvisko *</label> <input type="text" class="form-control c-form__input" id="lastName" name="lastName" required>
+           <label for="lastName" class="c-form__label">Priezvisko *</label> <input type="text" class="form-control c-form__input" id="lastName" name="lastName" required="">
            <div class="c-form__error">Prosím, vyplňte vaše priezvisko</div>
           </div>
          </div>
          <div class="col-md-6">
           <div class="c-form__group">
-           <label for="email" class="c-form__label">E-mail *</label> <input type="email" class="form-control c-form__input" id="email" name="email" required>
+           <label for="email" class="c-form__label">E-mail *</label> <input type="email" class="form-control c-form__input" id="email" name="email" required="">
            <div class="c-form__error">Prosím, zadajte platnú e-mailovú adresu</div>
           </div>
          </div>
          <div class="col-md-6">
           <div class="c-form__group">
-           <label for="phone" class="c-form__label">Telefón *</label> <input type="tel" class="form-control c-form__input" id="phone" name="phone" required>
+           <label for="phone" class="c-form__label">Telefón *</label> <input type="tel" class="form-control c-form__input" id="phone" name="phone" required="">
            <div class="c-form__error">Prosím, zadajte platné telefónne číslo</div>
           </div>
          </div>
@@ -336,14 +334,14 @@
          </div>
          <div class="col-12">
           <div class="c-form__group">
-           <label for="message" class="c-form__label">Správa *</label> <textarea class="form-control c-form__textarea" id="message" name="message" rows="5" required></textarea>
+           <label for="message" class="c-form__label">Správa *</label> <textarea class="form-control c-form__textarea" id="message" name="message" rows="5" required=""></textarea>
            <div class="c-form__error">Prosím, napíšte vašu správu</div>
           </div>
          </div>
          <div class="col-12">
           <div class="c-form__checkbox">
            <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="privacy" name="privacy" required> <label class="form-check-label" for="privacy"> Prečítal som a súhlasím s <a href="privacy.html" class="text-decoration-underline">Ochranou osobných údajov</a> * </label>
+            <input class="form-check-input" type="checkbox" id="privacy" name="privacy" required=""> <label class="form-check-label" for="privacy"> Prečítal som a súhlasím s <a href="privacy.html" class="text-decoration-underline">Ochranou osobných údajov</a> * </label>
             <div class="c-form__error">Musíte súhlasiť s ochranou osobných údajov pred odoslaním formulára</div>
            </div>
           </div>
@@ -367,19 +365,19 @@
       <div class="contact-info">
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {address}
        </p>
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {telephone}
        </p>
        <p class="mb-0">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         info@domain.com
        </p>
@@ -422,6 +420,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
