--- a/services.html
+++ b/services.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="sk">
- <head>
+<!DOCTYPE html><html lang="sk"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Naše služby - Prémiové autoservisné riešenia | domain.com</title>
@@ -20,7 +18,7 @@
     <div class="container">
      <a class="navbar-brand c-logo" href="/"> 
       <svg class="c-logo__img" width="150" height="40" viewBox="0 0 150 40" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
-       <rect width="150" height="40" rx="4" fill="#000000" /> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8" /> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
+       <rect width="150" height="40" rx="4" fill="#000000"></rect> <path d="M20 10L30 20L20 30L10 20L20 10Z" fill="#E8B4B8"></path> <text x="45" y="26" font-family="serif" font-size="18" font-weight="700" fill="#E8B4B8">AutoElite</text>
       </svg> 
      </a>
      <button class="navbar-toggler c-nav__toggle" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Prepnúť navigáciu"><span class="navbar-toggler-icon"></span></button>
@@ -52,7 +50,7 @@
       </div>
       <div class="col-lg-6">
        <div class="ratio ratio-16x9">
-        <img src="https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?w=800&amp;h=600&amp;fit=crop" alt="Moderný autoservis s profesionálnym vybavením, autoservis, mechanici, nástroje, vozidlá" class="img-fluid" loading="lazy" style="object-fit: cover; border-radius: 8px;">
+        <img src="img/car-lift-garage_976492-90304.jpg" alt="Moderný autoservis s profesionálnym vybavením, autoservis, mechanici, nástroje, vozidlá" class="img-fluid" loading="lazy" style="object-fit: cover; border-radius: 8px;">
        </div>
       </div>
      </div>
@@ -80,7 +78,7 @@
        <div class="c-card h-100 d-flex flex-column text-center p-4">
         <div class="ratio ratio-1x1 mb-3" style="max-width: 80px; margin: 0 auto;">
          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--color-accent);">
-          <path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z" />
+          <path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"></path>
          </svg>
         </div>
         <h3 class="h5 fw-semibold mb-3">Opravy a diagnostika</h3>
@@ -102,7 +100,7 @@
        <div class="c-card h-100 d-flex flex-column text-center p-4">
         <div class="ratio ratio-1x1 mb-3" style="max-width: 80px; margin: 0 auto;">
          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="color: var(--color-accent);">
-          <path d="M18 8h1a4 4 0 0 1 0 8h-1" /> <path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z" /> <line x1="6" y1="1" x2="6" y2="4"></line> <line x1="10" y1="1" x2="10" y2="4"></line> <line x1="14" y1="1" x2="14" y2="4"></line>
+          <path d="M18 8h1a4 4 0 0 1 0 8h-1"></path> <path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path> <line x1="6" y1="1" x2="6" y2="4"></line> <line x1="10" y1="1" x2="10" y2="4"></line> <line x1="14" y1="1" x2="14" y2="4"></line>
          </svg>
         </div>
         <h3 class="h5 fw-semibold mb-3">Karoséria a lak</h3>
@@ -134,7 +132,7 @@
       <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
        <div class="c-card h-100 d-flex flex-column">
         <div class="ratio ratio-4x3">
-         <img src="https://images.unsplash.com/photo-1632823469883-e8f8d0c36000?w=600&amp;h=450&amp;fit=crop" alt="Profesionálna diagnostika vozidla počítačom, diagnostika, autoservis, elektronika, mechanik" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/focused-manly-woman-is-doing-car-diagnostic-with-computer-help-auto-service_6.jpg" alt="Profesionálna diagnostika vozidla počítačom, diagnostika, autoservis, elektronika, mechanik" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="c-card__body p-4 d-flex flex-column">
          <h3 class="h4 fw-semibold mb-3">Počítačová diagnostika</h3>
@@ -146,7 +144,7 @@
       <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
        <div class="c-card h-100 d-flex flex-column">
         <div class="ratio ratio-4x3">
-         <img src="https://images.unsplash.com/photo-1619642751034-765dfdf7c58e?w=600&amp;h=450&amp;fit=crop" alt="Výkonnostný tuning motora a optimalizácia, tuning, motor, výkon, úpravy" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/mechanic-fixing-engine_53876-9344.jpg" alt="Výkonnostný tuning motora a optimalizácia, tuning, motor, výkon, úpravy" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="c-card__body p-4 d-flex flex-column">
          <h3 class="h4 fw-semibold mb-3">Chiptuning a úpravy</h3>
@@ -158,7 +156,7 @@
       <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
        <div class="c-card h-100 d-flex flex-column">
         <div class="ratio ratio-4x3">
-         <img src="https://images.unsplash.com/photo-1607860108855-64acf2078ed9?w=600&amp;h=450&amp;fit=crop" alt="Oprava a výmena brzdového systému, brzdy, autoservis, údržba, bezpečnosť" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/young-auto-mechanic-special-suit-repairs-brake-system-car-changes-brake-pads_.jpg" alt="Oprava a výmena brzdového systému, brzdy, autoservis, údržba, bezpečnosť" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="c-card__body p-4 d-flex flex-column">
          <h3 class="h4 fw-semibold mb-3">Brzdový systém</h3>
@@ -170,7 +168,7 @@
       <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
        <div class="c-card h-100 d-flex flex-column">
         <div class="ratio ratio-4x3">
-         <img src="https://images.unsplash.com/photo-1615906655593-ad0386982a0f?w=600&amp;h=450&amp;fit=crop" alt="Profesionálne lakovanie a oprava karosérie, lakovanie, karoséria, oprava, autoservis" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/painting-cars-vehicle-maintenance-service-using-paint-sprayer-car-painter-is-.jpg" alt="Profesionálne lakovanie a oprava karosérie, lakovanie, karoséria, oprava, autoservis" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="c-card__body p-4 d-flex flex-column">
          <h3 class="h4 fw-semibold mb-3">Lakovanie a karoséria</h3>
@@ -182,7 +180,7 @@
       <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
        <div class="c-card h-100 d-flex flex-column">
         <div class="ratio ratio-4x3">
-         <img src="https://images.unsplash.com/photo-1621361365424-06f0e1eb5c49?w=600&amp;h=450&amp;fit=crop" alt="Výmena a vyvažovanie pneumatík, pneumatiky, autoservis, výmena, kolesa" class="img-fluid" loading="lazy" style="object-fit: cover;">
+         <img src="img/mechanic-removes-car-tire-closeup_1068916-958.jpg" alt="Výmena a vyvažovanie pneumatík, pneumatiky, autoservis, výmena, kolesa" class="img-fluid" loading="lazy" style="object-fit: cover;">
         </div>
         <div class="c-card__body p-4 d-flex flex-column">
          <h3 class="h4 fw-semibold mb-3">Pneumatiky a geometria</h3>
@@ -204,7 +202,7 @@
       <div class="col-md-3 col-6 text-center" data-aos="fade-up" data-aos-delay="100">
        <div class="ratio ratio-1x1 mb-3" style="max-width: 100px; margin: 0 auto;">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="color: var(--color-accent);">
-         <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
+         <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"></path>
         </svg>
        </div>
        <h3 class="h6 fw-semibold">Najlepší autoservis 2024</h3>
@@ -212,7 +210,7 @@
       <div class="col-md-3 col-6 text-center" data-aos="fade-up" data-aos-delay="200">
        <div class="ratio ratio-1x1 mb-3" style="max-width: 100px; margin: 0 auto;">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="color: var(--color-accent);">
-         <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
+         <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"></path>
         </svg>
        </div>
        <h3 class="h6 fw-semibold">Certifikát kvality ISO</h3>
@@ -220,7 +218,7 @@
       <div class="col-md-3 col-6 text-center" data-aos="fade-up" data-aos-delay="300">
        <div class="ratio ratio-1x1 mb-3" style="max-width: 100px; margin: 0 auto;">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="color: var(--color-accent);">
-         <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
+         <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"></path>
         </svg>
        </div>
        <h3 class="h6 fw-semibold">Cena zákazníkov</h3>
@@ -228,7 +226,7 @@
       <div class="col-md-3 col-6 text-center" data-aos="fade-up" data-aos-delay="400">
        <div class="ratio ratio-1x1 mb-3" style="max-width: 100px; margin: 0 auto;">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="color: var(--color-accent);">
-         <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
+         <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"></path>
         </svg>
        </div>
        <h3 class="h6 fw-semibold">Top servis regiónu</h3>
@@ -246,35 +244,35 @@
       <div class="col-6 col-md-4 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="100">
        <div class="p-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 40" fill="currentColor" style="color: var(--color-text-muted); opacity: 0.6; width: 100%; height: auto;">
-         <rect x="10" y="10" width="80" height="20" rx="4" /> <text x="50" y="27" font-size="12" text-anchor="middle" fill="white">PARTNER</text>
+         <rect x="10" y="10" width="80" height="20" rx="4"></rect> <text x="50" y="27" font-size="12" text-anchor="middle" fill="white">PARTNER</text>
         </svg>
        </div>
       </div>
       <div class="col-6 col-md-4 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="200">
        <div class="p-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 40" fill="currentColor" style="color: var(--color-text-muted); opacity: 0.6; width: 100%; height: auto;">
-         <rect x="10" y="10" width="80" height="20" rx="4" /> <text x="50" y="27" font-size="12" text-anchor="middle" fill="white">BRAND</text>
+         <rect x="10" y="10" width="80" height="20" rx="4"></rect> <text x="50" y="27" font-size="12" text-anchor="middle" fill="white">BRAND</text>
         </svg>
        </div>
       </div>
       <div class="col-6 col-md-4 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="300">
        <div class="p-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 40" fill="currentColor" style="color: var(--color-text-muted); opacity: 0.6; width: 100%; height: auto;">
-         <rect x="10" y="10" width="80" height="20" rx="4" /> <text x="50" y="27" font-size="12" text-anchor="middle" fill="white">AUTO CO</text>
+         <rect x="10" y="10" width="80" height="20" rx="4"></rect> <text x="50" y="27" font-size="12" text-anchor="middle" fill="white">AUTO CO</text>
         </svg>
        </div>
       </div>
       <div class="col-6 col-md-4 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="400">
        <div class="p-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 40" fill="currentColor" style="color: var(--color-text-muted); opacity: 0.6; width: 100%; height: auto;">
-         <rect x="10" y="10" width="80" height="20" rx="4" /> <text x="50" y="27" font-size="12" text-anchor="middle" fill="white">MOTORS</text>
+         <rect x="10" y="10" width="80" height="20" rx="4"></rect> <text x="50" y="27" font-size="12" text-anchor="middle" fill="white">MOTORS</text>
         </svg>
        </div>
       </div>
       <div class="col-6 col-md-4 col-lg-2 text-center" data-aos="fade-up" data-aos-delay="500">
        <div class="p-3">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 40" fill="currentColor" style="color: var(--color-text-muted); opacity: 0.6; width: 100%; height: auto;">
-         <rect x="10" y="10" width="80" height="20" rx="4" /> <text x="50" y="27" font-size="12" text-anchor="middle" fill="white">PREMIUM</text>
+         <rect x="10" y="10" width="80" height="20" rx="4"></rect> <text x="50" y="27" font-size="12" text-anchor="middle" fill="white">PREMIUM</text>
         </svg>
        </div>
       </div>
@@ -292,7 +290,7 @@
        <div class="c-card h-100 p-4">
         <div class="d-flex align-items-center mb-3">
          <div class="ratio ratio-1x1 me-3" style="max-width: 60px;">
-          <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=120&amp;h=120&amp;fit=crop" alt="Peter Novák, spokojný klient, muž, úsmev, portrét" class="img-fluid" loading="lazy" style="object-fit: cover; border-radius: 50%;">
+          <img src="img/portrait-handsome-laughing-blond-man-looking-camera_230311-1842.jpg" alt="Peter Novák, spokojný klient, muž, úsmev, portrét" class="img-fluid" loading="lazy" style="object-fit: cover; border-radius: 50%;">
          </div>
          <div>
           <h3 class="h6 fw-semibold mb-0">Peter Novák</h3>
@@ -309,7 +307,7 @@
        <div class="c-card h-100 p-4">
         <div class="d-flex align-items-center mb-3">
          <div class="ratio ratio-1x1 me-3" style="max-width: 60px;">
-          <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=120&amp;h=120&amp;fit=crop" alt="Mária Kováčová, spokojná klientka, žena, úsmev, portrét" class="img-fluid" loading="lazy" style="object-fit: cover; border-radius: 50%;">
+          <img src="img/young-woman-sitting-table-kitchen-young-woman_358354-9182.jpg" alt="Mária Kováčová, spokojná klientka, žena, úsmev, portrét" class="img-fluid" loading="lazy" style="object-fit: cover; border-radius: 50%;">
          </div>
          <div>
           <h3 class="h6 fw-semibold mb-0">Mária Kováčová</h3>
@@ -326,7 +324,7 @@
        <div class="c-card h-100 p-4">
         <div class="d-flex align-items-center mb-3">
          <div class="ratio ratio-1x1 me-3" style="max-width: 60px;">
-          <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=120&amp;h=120&amp;fit=crop" alt="Ján Horák, spokojný klient, muž, úsmev, portrét" class="img-fluid" loading="lazy" style="object-fit: cover; border-radius: 50%;">
+          <img src="img/man-is-smiling-wearing-black-vest-white-shirt_964739-14304.jpg" alt="Ján Horák, spokojný klient, muž, úsmev, portrét" class="img-fluid" loading="lazy" style="object-fit: cover; border-radius: 50%;">
          </div>
          <div>
           <h3 class="h6 fw-semibold mb-0">Ján Horák</h3>
@@ -365,19 +363,19 @@
       <div class="contact-info">
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {address}
        </p>
        <p class="mb-2">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         {telephone}
        </p>
        <p class="mb-0">
         <svg class="me-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8" />
+         <path d="M8 0L10 6L16 6L11 10L13 16L8 12L3 16L5 10L0 6L6 6L8 0Z" fill="#E8B4B8"></path>
         </svg>
         info@domain.com
        </p>
@@ -420,6 +418,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
